--- a/ProjetDeSessionGTA431.ipynb
+++ b/ProjetDeSessionGTA431.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ProjetDeSessionGTA431.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMDIT3AKQxLHdi4TT6hpqyr",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOChy41X6DWVXnPTwaihXbD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,11 +32,23 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "sOZupsZXnmo1"
+        "id": "sOZupsZXnmo1",
+        "outputId": "caed2033-6514-4425-c0df-6f0e732b99d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Projet GTA\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(\"Projet GTA\")"
       ]
     }
   ]
